logs/dag_id=tune_stream_dag/run_id=scheduled__2023-01-03T210000+0000/task_id=Load_songplays_fact_table/attempt=1.log
[2025-07-24T14:30:09.131+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-03T21:00:00+00:00 [queued]>
[2025-07-24T14:30:09.149+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-03T21:00:00+00:00 [queued]>
[2025-07-24T14:30:09.153+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 4
[2025-07-24T14:30:09.171+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): Load_songplays_fact_table> on 2023-01-03 21:00:00+00:00
[2025-07-24T14:30:09.180+0000] {standard_task_runner.py:60} INFO - Started process 921 to run task
[2025-07-24T14:30:09.185+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'tune_stream_dag', 'Load_songplays_fact_table', 'scheduled__2023-01-03T21:00:00+00:00', '--job-id', '584', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmpwbmjy_av']
[2025-07-24T14:30:09.189+0000] {standard_task_runner.py:88} INFO - Job 584: Subtask Load_songplays_fact_table
[2025-07-24T14:30:09.285+0000] {task_command.py:423} INFO - Running <TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-03T21:00:00+00:00 [running]> on host aea62fae55be
[2025-07-24T14:30:09.401+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='genz-legend' AIRFLOW_CTX_DAG_ID='tune_stream_dag' AIRFLOW_CTX_TASK_ID='Load_songplays_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2023-01-03T21:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-01-03T21:00:00+00:00'
[2025-07-24T14:30:09.410+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/etl_pipeline.py", line 164, in <lambda>
    python_callable=lambda: load_table(SqlQueries.songplay_table_insert),
  File "/opt/airflow/dags/etl_pipeline.py", line 123, in load_table
    cur.execute(f"DELETE FROM {query.split()[3]}")
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 1: DELETE FROM events.start_time)
                                     ^

[2025-07-24T14:30:09.426+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=tune_stream_dag, task_id=Load_songplays_fact_table, execution_date=20230103T210000, start_date=20250724T143009, end_date=20250724T143009
[2025-07-24T14:30:09.445+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 584 for task Load_songplays_fact_table (syntax error at or near ")"
LINE 1: DELETE FROM events.start_time)
                                     ^
; 921)
[2025-07-24T14:30:09.478+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-07-24T14:30:09.517+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-07-24T17:28:14.093+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-03T21:00:00+00:00 [queued]>
[2025-07-24T17:28:14.192+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-03T21:00:00+00:00 [queued]>
[2025-07-24T17:28:14.194+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 4
[2025-07-24T17:28:14.215+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): Load_songplays_fact_table> on 2023-01-03 21:00:00+00:00
[2025-07-24T17:28:14.233+0000] {standard_task_runner.py:60} INFO - Started process 2500 to run task
[2025-07-24T17:28:14.265+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'tune_stream_dag', 'Load_songplays_fact_table', 'scheduled__2023-01-03T21:00:00+00:00', '--job-id', '2383', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmplsx0easc']
[2025-07-24T17:28:14.270+0000] {standard_task_runner.py:88} INFO - Job 2383: Subtask Load_songplays_fact_table
[2025-07-24T17:28:14.600+0000] {task_command.py:423} INFO - Running <TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-03T21:00:00+00:00 [running]> on host 5def55d2a1b5
[2025-07-24T17:28:14.794+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='genz-legend' AIRFLOW_CTX_DAG_ID='tune_stream_dag' AIRFLOW_CTX_TASK_ID='Load_songplays_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2023-01-03T21:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-01-03T21:00:00+00:00'
[2025-07-24T17:28:31.923+0000] {python.py:201} INFO - Done. Returned value was: None
[2025-07-24T17:28:32.156+0000] {taskinstance.py:1138} INFO - Marking task as SUCCESS. dag_id=tune_stream_dag, task_id=Load_songplays_fact_table, execution_date=20230103T210000, start_date=20250724T172814, end_date=20250724T172832
[2025-07-24T17:28:32.373+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 0
[2025-07-24T17:28:32.406+0000] {taskinstance.py:3280} INFO - 4 downstream tasks scheduled from follow-on schedule check
